k8s-network/v2/ingress/canary/production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: echo.demon.com
    http:
      paths:
      - backend:
          serviceName: production
          servicePort: 80
